crunch/crn_decomp.h

typedef unsigned int uint32;
typedef uint32 uint32;
struct crn_texture_info {
	inline crn_texture_info() : m_struct_size(sizeof(crn_texture_info)) {}

	uint32 m_struct_size;
	uint32 m_width;
	uint32 m_height;
	uint32 m_levels;
	uint32 m_faces;
	uint32 m_bytes_per_block;
	uint32 m_userdata0;
	uint32 m_userdata1;
	crn_format m_format;
};
struct crn_level_info {
	inline crn_level_info() : m_struct_size(sizeof(crn_level_info)) {}

	uint32 m_struct_size;
	uint32 m_width;
	uint32 m_height;
	uint32 m_faces;
	uint32 m_blocks_x;
	uint32 m_blocks_y;
	uint32 m_bytes_per_block;
	crn_format m_format;
};
// Returns the FOURCC format code corresponding to the specified CRN format.
uint32 crnd_crn_format_to_fourcc(crn_format fmt);
// Returns the size of the crn_format in bits/texel (either 4 or 8).
uint32 crnd_get_crn_format_bits_per_texel(crn_format fmt);
// Returns the number of bytes per DXTn block (8 or 16).
uint32 crnd_get_bytes_per_dxt_block(crn_format fmt);
// Retrieves texture information from the CRN file.
// The crn_texture_info.m_struct_size field must be set before calling this function.
bool crnd_get_texture_info(
	const void *pData, uint32 data_size, crn_texture_info *pTexture_info);
// Retrieves mipmap level specific information from the CRN file.
// The crn_level_info.m_struct_size field must be set before calling this function.
bool crnd_get_level_info(
	const void *pData,
	uint32 data_size,
	uint32 level_index,
	crn_level_info *pLevel_info);
// Transcode/unpack context handle.
typedef void *crnd_unpack_context;
// crnd_unpack_begin() - Decompresses the texture's decoder tables and endpoint/selector
// palettes. Once you call this function, you may call crnd_unpack_level() to unpack one
// or more mip levels. Don't call this once per mip level (unless you absolutely must)!
// This function allocates enough memory to hold: Huffman decompression tables, and the
// endpoint/selector palettes (color and/or alpha). Worst case allocation is approx.
// 200k, assuming all palettes contain 8192 entries. pData must point to a buffer
// holding all of the compressed .CRN file data. This buffer must be stable until
// crnd_unpack_end() is called. Returns NULL if out of memory, or if any of the input
// parameters are invalid.
crnd_unpack_context crnd_unpack_begin(const void *pData, uint32 data_size);
// crnd_unpack_level() - Transcodes the specified mipmap level to a destination buffer
// in cached or write combined memory. pContext - Context created by a call to
// crnd_unpack_begin(). ppDst - A pointer to an array of 1 or 6 destination buffer
// pointers. Cubemaps require an array of 6 pointers, 2D textures require an array of 1
// pointer. dst_size_in_bytes - Optional size of each destination buffer. Only used for
// debugging - OK to set to UINT32_MAX. row_pitch_in_bytes - The pitch in bytes from one
// row of DXT blocks to the next. Must be a multiple of 4. level_index - mipmap level
// index, where 0 is the largest/first level. Returns false if any of the input
// parameters, or the compressed stream, are invalid. This function does not allocate
// any memory.
bool crnd_unpack_level(
	crnd_unpack_context pContext,
	void **ppDst,
	uint32 dst_size_in_bytes,
	uint32 row_pitch_in_bytes,
	uint32 level_index);
// crnd_unpack_end() - Frees the decompress tables and unpacked palettes associated with
// the specified unpack context. Returns false if the context is NULL, or if it points
// to an invalid context. This function frees all memory associated with the context.
bool crnd_unpack_end(crnd_unpack_context pContext);
struct crn_header {
	enum { cCRNSigValue = ('H' << 8) | 'x' };

	crn_packed_uint<2> m_sig;
	crn_packed_uint<2> m_header_size;
	crn_packed_uint<2> m_header_crc16;

	crn_packed_uint<4> m_data_size;
	crn_packed_uint<2> m_data_crc16;

	crn_packed_uint<2> m_width;
	crn_packed_uint<2> m_height;

	crn_packed_uint<1> m_levels;
	crn_packed_uint<1> m_faces;

	crn_packed_uint<1> m_format;
	crn_packed_uint<2> m_flags;

	crn_packed_uint<4> m_reserved;
	crn_packed_uint<4> m_userdata0;
	crn_packed_uint<4> m_userdata1;

	crn_palette m_color_endpoints;
	crn_palette m_color_selectors;

	crn_palette m_alpha_endpoints;
	crn_palette m_alpha_selectors;

	crn_packed_uint<2> m_tables_size;
	crn_packed_uint<3> m_tables_ofs;

	// m_level_ofs[] is actually an array of offsets: m_level_ofs[m_levels]
	crn_packed_uint<4> m_level_ofs[1];
};
// From yasli_traits.h:
// Credit goes to Boost;
// also found in the C++ Templates book by Vandevoorde and Josuttis

typedef char (&yes_t)[1];
typedef char (&no_t)[2];
uint32 crnd_crn_format_to_fourcc(crn_format fmt) {
	switch (fmt) {
	case cCRNFmtDXT1:
		return CRND_FOURCC('D', 'X', 'T', '1');
	case cCRNFmtDXT3:
		return CRND_FOURCC('D', 'X', 'T', '3');
	case cCRNFmtDXT5:
		return CRND_FOURCC('D', 'X', 'T', '5');
	case cCRNFmtDXN_XY:
		return CRND_FOURCC('A', '2', 'X', 'Y');
	case cCRNFmtDXN_YX:
		return CRND_FOURCC('A', 'T', 'I', '2');
	case cCRNFmtDXT5A:
		return CRND_FOURCC('A', 'T', 'I', '1');
	case cCRNFmtDXT5_CCxY:
		return CRND_FOURCC('C', 'C', 'x', 'Y');
	case cCRNFmtDXT5_xGxR:
		return CRND_FOURCC('x', 'G', 'x', 'R');
	case cCRNFmtDXT5_xGBR:
		return CRND_FOURCC('x', 'G', 'B', 'R');
	case cCRNFmtDXT5_AGBR:
		return CRND_FOURCC('A', 'G', 'B', 'R');
	case cCRNFmtETC1:
		return CRND_FOURCC('E', 'T', 'C', '1');
	case cCRNFmtETC2:
		return CRND_FOURCC('E', 'T', 'C', '2');
	case cCRNFmtETC2A:
		return CRND_FOURCC('E', 'T', '2', 'A');
	case cCRNFmtETC1S:
		return CRND_FOURCC('E', 'T', '1', 'S');
	case cCRNFmtETC2AS:
		return CRND_FOURCC('E', '2', 'A', 'S');
	default:
		break;
	}
	CRND_ASSERT(false);
	return 0;
}
uint32 crnd_get_crn_format_bits_per_texel(crn_format fmt) {
	switch (fmt) {
	case cCRNFmtDXT1:
	case cCRNFmtDXT5A:
	case cCRNFmtETC1:
	case cCRNFmtETC2:
	case cCRNFmtETC1S:
		return 4;
	case cCRNFmtDXT3:
	case cCRNFmtDXT5:
	case cCRNFmtDXN_XY:
	case cCRNFmtDXN_YX:
	case cCRNFmtDXT5_CCxY:
	case cCRNFmtDXT5_xGxR:
	case cCRNFmtDXT5_xGBR:
	case cCRNFmtDXT5_AGBR:
	case cCRNFmtETC2A:
	case cCRNFmtETC2AS:
		return 8;
	default:
		break;
	}
	CRND_ASSERT(false);
	return 0;
}
uint32 crnd_get_bytes_per_dxt_block(crn_format fmt) {
	return (crnd_get_crn_format_bits_per_texel(fmt) << 4) >> 3;
}
bool crnd_get_texture_info(
	const void *pData, uint32 data_size, crn_texture_info *pInfo) {
	if ((!pData) || (data_size < sizeof(crn_header)) || (!pInfo))
		return false;

	if (pInfo->m_struct_size != sizeof(crn_texture_info))
		return false;

	crn_header tmp_header;
	const crn_header *pHeader = crnd_get_header(tmp_header, pData, data_size);
	if (!pHeader)
		return false;

	pInfo->m_width = pHeader->m_width;
	pInfo->m_height = pHeader->m_height;
	pInfo->m_levels = pHeader->m_levels;
	pInfo->m_faces = pHeader->m_faces;
	pInfo->m_format = static_cast<crn_format>((uint32)pHeader->m_format);
	pInfo->m_bytes_per_block =
		((pHeader->m_format == cCRNFmtDXT1) || (pHeader->m_format == cCRNFmtDXT5A) ||
		 (pHeader->m_format == cCRNFmtETC1) || (pHeader->m_format == cCRNFmtETC2) ||
		 (pHeader->m_format == cCRNFmtETC1S))
		? 8
		: 16;
	pInfo->m_userdata0 = pHeader->m_userdata0;
	pInfo->m_userdata1 = pHeader->m_userdata1;

	return true;
}
bool crnd_get_level_info(
	const void *pData,
	uint32 data_size,
	uint32 level_index,
	crn_level_info *pLevel_info) {
	if ((!pData) || (data_size < cCRNHeaderMinSize) || (!pLevel_info))
		return false;

	if (pLevel_info->m_struct_size != sizeof(crn_level_info))
		return false;

	crn_header tmp_header;
	const crn_header *pHeader = crnd_get_header(tmp_header, pData, data_size);
	if (!pHeader)
		return false;

	if (level_index >= pHeader->m_levels)
		return false;

	uint32 width = math::maximum<uint32>(1U, pHeader->m_width >> level_index);
	uint32 height = math::maximum<uint32>(1U, pHeader->m_height >> level_index);

	pLevel_info->m_width = width;
	pLevel_info->m_height = height;
	pLevel_info->m_faces = pHeader->m_faces;
	pLevel_info->m_blocks_x = (width + 3) >> 2;
	pLevel_info->m_blocks_y = (height + 3) >> 2;
	pLevel_info->m_bytes_per_block =
		((pHeader->m_format == cCRNFmtDXT1) || (pHeader->m_format == cCRNFmtDXT5A))
		? 8
		: 16;
	pLevel_info->m_format = static_cast<crn_format>((uint32)pHeader->m_format);

	return true;
}
crnd_unpack_context crnd_unpack_begin(const void *pData, uint32 data_size) {
	if ((!pData) || (data_size < cCRNHeaderMinSize))
		return NULL;

	crn_unpacker *p = crnd_new<crn_unpacker>();
	if (!p)
		return NULL;

	if (!p->init(pData, data_size)) {
		crnd_delete(p);
		return NULL;
	}

	return p;
}
bool crnd_unpack_level(
	crnd_unpack_context pContext,
	void **pDst,
	uint32 dst_size_in_bytes,
	uint32 row_pitch_in_bytes,
	uint32 level_index) {
	if ((!pContext) || (!pDst) || (dst_size_in_bytes < 8U) ||
		(level_index >= cCRNMaxLevels))
		return false;

	crn_unpacker *pUnpacker = static_cast<crn_unpacker *>(pContext);

	if (!pUnpacker->is_valid())
		return false;

	return pUnpacker->unpack_level(
		pDst, dst_size_in_bytes, row_pitch_in_bytes, level_index);
}
bool crnd_unpack_end(crnd_unpack_context pContext) {
	if (!pContext)
		return false;

	crn_unpacker *pUnpacker = static_cast<crn_unpacker *>(pContext);

	if (!pUnpacker->is_valid())
		return false;

	crnd_delete(pUnpacker);

	return true;
}